# memory-seam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
bridge/: CHANGELOG.md  README.md  pyproject.toml
docs/: README.md  adapter-certification.md  adapter-import-boundary.md  atlas-query-bridge.md  atlas-query-migration.md  contract-test-inventory.md  default-off-runtime.md  downstream-integration-smoke-plan.md  envelope-schema-snapshots.md  f2-verifier-packet.md  f3-manual-pull-dogfood.md  f3-source-card-usefulness-proof.md  f3-verifier-packet.md  f4-verifier-packet.md  issue-railed-autopilot.md  l4-closure-review.md  l5-bounded-runner.md  l5-idle-tick-contract.md  l5-post-read-verifier.md  l5-supervised-canary-one-tick-unhold-packet.md  l5-supervised-one-read-receipt.md  l5-supervised-one-read-runbook.md  l5-supervised-source-grant-packet.md  l6-custody-persistence-threat-model.md  l6-custody-receipt-noop-fixtures.md  l6-future-allowed-path-counter-callback-contract.md  l6-implementation-candidate-selector-packet.md  l6-implementation-unhold-packet.md  l6-live-use-pivot-frontier-packet.md  l6-positive-authorization-boundary-matrix.md  l6-positive-authorization-report-hygiene.md  l6-write-custody-approval-model.md  l6-write-custody-operation-class-fixtures.md  l6-write-custody-rollback-audit-plan.md  l6-write-intent-preflight-gate.md  l6-write-intent-threat-model.md  l6-write-intent-trust-boundary-review.md  l6aa01-exact-owner-approved-target-ref-packet.md  l6aa02-owner-approved-one-read-value-proof.md  l6aa03-value-proof-receipt-hygiene-verifier.md  (+53 more)
examples/: __init__.py  l6_positive_authorization_no_production_smoke.py  l6v_supervised_source_card_no_live_smoke.py  l6w_supervised_live_read_approval_no_live_smoke.py  (+6 more)
(+391 files in other folders)
